# mfma-scrapedb

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 326f35ee99e4_create_initial_page_and_scrape_tables.py  3399810933e2_create_initial_page_and_scrape_tables.py
scrapedb/: import_scrape.py  models.py
