[tool.poetry]
name = "mfma-scrapedb"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jbothma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
