[tool.poetry]
name = "mfma-scrapedb"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jbothma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.20"
alembic = "1.6.5"
psycopg2 = "2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
